--- a/Technical-document-page.html
+++ b/Technical-document-page.html
@@ -3,7 +3,7 @@
 
     <head>
         <link rel="stylesheet" href="Technical-document-page.css" text="text-css">
-        <ul><nav id="navbar"><header><h1 class="title">RAKI</h1></header>
+        <ul><nav class="navbar" id="navbar"><header><h1 class="title">RAKI</h1></header>
         <li><a href="#Etymology_of_Rakı" class="nav-link"> Etymology of Rakı</a></li>
         <li><a href="#History_of_Rakı" class="nav-link">History of Rakı </a></li>
         <li><a href="#Production" class="nav-link">Production</a></li>
